<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_blue"
    android:backgroundTint="@color/background_color_blue"
    tools:context=".views.AdoptableDetail">

    <ImageButton
        android:id="@+id/ibBackPetDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#02FFFFFF"
        android:foregroundTint="#EEFFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="#000000" />

    <TextView
        android:id="@+id/tvPetDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/h4"
        app:layout_constraintStart_toEndOf="@+id/ibBackPetDetail"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nombre" />

    <ScrollView
        android:id="@+id/svPetDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPetDetailName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/perrito3" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/secundary_color"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/tvLabelBrench"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/pet_brench"
                    android:textColor="@color/white"
                    android:textSize="@dimen/b1" />

                <TextView
                    android:id="@+id/tvPetDetailBrench"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="Raza de la mascota"
                    android:textColor="@color/white"
                    android:textSize="@dimen/b1" />

                <TextView
                    android:id="@+id/tvLabelGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/pet_genger"
                    android:textColor="@color/white"
                    android:textSize="@dimen/b1" />

                <TextView
                    android:id="@+id/tvPetDetailGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="40dp"
                    android:hint="Genero mascota"
                    android:textColor="@color/white"
                    android:textSize="@dimen/b1" />

                <TextView
                    android:id="@+id/tvLabelEsteril"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="71dp"
                    android:text="@string/pet_esterilizado"
                    android:textColor="@color/white"
                    android:textSize="@dimen/b1" />

                <TextView
                    android:id="@+id/tvPetDetailEsteril"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="96dp"
                    android:layout_marginTop="71dp"
                    android:hint="Esta estelirizado"
                    android:textColor="@color/white"
                    android:textSize="@dimen/b1" />

                <TextView
                    android:id="@+id/tvLabelBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="101dp"
                    android:text="Fecha de nacimiento:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/b1" />

                <TextView
                    android:id="@+id/tvPetDetailBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="162dp"
                    android:layout_marginTop="101dp"
                    android:hint="Genero mascota"
                    android:textColor="@color/white"
                    android:textSize="@dimen/b1" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/know_him"
                android:textColor="@color/black"
                android:textSize="@dimen/h5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:hint="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                android:textColor="@color/black"
                android:textSize="@dimen/b1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLostPetOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:text="@string/btn_adopt"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:backgroundTint="@color/btn_green"
                app:cornerRadius="15dp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>